# ScopeSignal

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_README.md  DEPLOYMENT_GUIDE.md  FEATURES.md  INTEGRATION.md  LICENSE  PROFESSIONAL_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  TRANSFORMATION_SUMMARY.md  cli.py  dashboard.py  next.config.js  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
app/: globals.css  layout.tsx  page.tsx
app/ai-pulsepoint/: page.tsx
app/api/feasibility/: route.ts
app/api/geocode/: route.ts
app/api/scopesignal/batch/: route.ts
app/api/scopesignal/classify/: route.ts
app/api/veteran-dashboard/: route.ts
app/regula/: page.tsx
app/scopesignal/: page.tsx
app/veteran-dashboard/: page.tsx
app/violation-sentinel/: page.tsx
classifier/: __init__.py  __version__.py  agent.py  cache.py  export.py
components/layout/: DashboardLayout.tsx  Header.tsx  ModuleGrid.tsx
components/modules/: AIPulsePointDashboard.tsx  ProjectMap.tsx  ProjectMapContent.tsx  RegulaDashboard.tsx  ScopeSignalDashboard.tsx  VeteranDashboard.tsx  ViolationSentinelDashboard.tsx
components/ui/: RealtimeDataFeed.tsx
components/visualizations/: ThreeVisualization.tsx
components/voice/: VoiceCommandButton.tsx
data/: __init__.py  geocode_cache.db  simulator.py
evaluation/: VALIDATION_TEMPLATE.md  __init__.py  evaluate.py  metrics.py
examples/: README.md  integration_demo.py  sample_batch.json  usage_examples.py
lib/constants/: map.ts
lib/hooks/: useVoiceCommand.ts  useWebSocket.ts
lib/websocket/: websocketService.ts
tests/: test_agent.py
tests/integration/: test_simulator_integration.py
