[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopesignal"
version = "2.0.0"
description = "Conservative classification of NYC construction project updates for subcontractors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ScopeSignal Contributors"}
]
keywords = ["construction", "classification", "nlp", "llm", "nyc", "subcontractor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/NickAiNYC/ScopeSignal"
Documentation = "https://github.com/NickAiNYC/ScopeSignal#readme"
Repository = "https://github.com/NickAiNYC/ScopeSignal"
Issues = "https://github.com/NickAiNYC/ScopeSignal/issues"
Changelog = "https://github.com/NickAiNYC/ScopeSignal/blob/main/CHANGELOG.md"

[project.scripts]
scopesignal = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["classifier*", "data*", "evaluation*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[tool.coverage.run]
source = ["classifier", "evaluation", "data"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
